[gd_scene load_steps=13 format=3 uid="uid://b1nsbqfdtiaqf"]

[ext_resource type="Script" uid="uid://cm5tee6eqkyoj" path="res://Scenes/UI/Menus/NextLevel.gd" id="2_y3kif"]
[ext_resource type="FontFile" uid="uid://b4lfqjm4wfgf2" path="res://Asset/Font/VCR_OSD_MONO_1.001.ttf" id="3_x45r7"]
[ext_resource type="Texture2D" uid="uid://bsmh7nd8lndh" path="res://Asset/Sprite/Textures/PanelTexture.png" id="4_d45qr"]
[ext_resource type="StyleBox" uid="uid://bxxuvw3u47hhj" path="res://Resources/Texture/Button/ButtonNormal.tres" id="5_6hbgh"]
[ext_resource type="StyleBox" uid="uid://b1415tteok2jy" path="res://Resources/Texture/Button/ButtonPressed.tres" id="6_y3kif"]
[ext_resource type="StyleBox" uid="uid://do5xtbv76wo0b" path="res://Resources/Texture/Button/ButtonHover.tres" id="7_x45r7"]
[ext_resource type="PackedScene" uid="uid://cac7sq4vlj501" path="res://Scenes/Fade/fade.tscn" id="9_y3kif"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y3kif"]
texture = ExtResource("4_d45qr")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0
region_rect = Rect2(0, 0, 32, 32)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qv44x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ewbbc"]

[sub_resource type="Animation" id="Animation_c4phj"]
resource_name = "play"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NextLevel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6hbgh"]
_data = {
&"play": SubResource("Animation_c4phj")
}

[node name="NextLevel" type="CanvasLayer"]
script = ExtResource("2_y3kif")

[node name="NextLevel" type="Control" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BG" type="ColorRect" parent="NextLevel"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.68235296)

[node name="RichTextLabel" type="RichTextLabel" parent="NextLevel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -177.75
offset_top = -105.520004
offset_right = 177.75
offset_bottom = -24.519882
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/normal_font = ExtResource("3_x45r7")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "Level Complete"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatPanel" type="Control" parent="NextLevel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.5
offset_top = -23.375
offset_right = 114.5
offset_bottom = 23.375
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Panel" type="Panel" parent="NextLevel/StatPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_y3kif")

[node name="Score" type="RichTextLabel" parent="NextLevel/StatPanel/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 4.0
offset_right = 138.83301
offset_bottom = 26.833
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)
theme_override_constants/paragraph_separation = 10
theme_override_fonts/normal_font = ExtResource("3_x45r7")
bbcode_enabled = true
text = "Predator founded : 0
Score : 0
Heart : 0"
vertical_alignment = 1

[node name="Heart" type="Control" parent="NextLevel/StatPanel/Panel"]
anchors_preset = 0
offset_left = 69.25
offset_top = 40.375
offset_right = 234.25
offset_bottom = 55.375

[node name="NextLevelButton" type="Control" parent="NextLevel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.5
offset_top = 43.0
offset_right = 68.5
offset_bottom = 72.96002
grow_horizontal = 2
grow_vertical = 2

[node name="NextLevelBtn" type="Button" parent="NextLevel/NextLevelButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_x45r7")
theme_override_styles/normal = ExtResource("5_6hbgh")
theme_override_styles/pressed = ExtResource("6_y3kif")
theme_override_styles/hover = ExtResource("7_x45r7")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_qv44x")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ewbbc")
text = "Next Level"

[node name="Fade" parent="." instance=ExtResource("9_y3kif")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_6hbgh")
}

[connection signal="mouse_entered" from="NextLevel/NextLevelButton/NextLevelBtn" to="." method="_on_next_level_btn_mouse_entered"]
[connection signal="pressed" from="NextLevel/NextLevelButton/NextLevelBtn" to="." method="_on_next_level_btn_pressed"]
